--- a/Portfolio_Webite/index.html
+++ b/Portfolio_Webite/index.html
@@ -243,7 +243,7 @@
   </footer>
   <!-- ***************  Footer Section End ************************** -->
   <div class="container-fluid py-5  justify-content-start">
-    <a href="./Portfolio_Webite/index.html" type="button"class="btn btn-outline-primary p-3">Prev Project</a>
+    <a href="../index.html" type="button"class="btn btn-outline-primary p-3">Prev Project</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
