--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -242,9 +242,10 @@
     </div>
   </footer>
   <!-- ***************  Footer Section End ************************** -->
-  <div class="container-fluid py-5  justify-content-start">
+  <div class="container-fluid py-4 d-flex justify-content-between">
     <a href="../index.html" type="button"class="btn btn-outline-primary p-3">Prev Project</a>
-  </div>
+    <a href="../Business_Website/index.html" type="button"class="btn btn-outline-primary p-3">Next Project</a>
+   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
