--- a/Business_Website/index.html
+++ b/Business_Website/index.html
@@ -347,11 +347,11 @@
     <!------- ########################  Footer Start #########################  ------->
     <footer class="py-5 bg-dark ">
         <div class="container px-5 d-flex align-items-center justify-content-between">
-            <a href="../Portfolio_Website/index.html" type="button"class="btn btn-outline-primary p-2">Prev Project</a>
+            <a href="../Portfolio_Website/index.html" target="_blank" type="button"class="btn btn-outline-primary p-2">Prev Project</a>
             <p class="m-0 text-center text-white">
                 Copyright © Your Website 2023
             </p>
-            <a href="../Portfolio_Webiste/index.html" type="button"class="btn btn-outline-primary p-2">Next Project</a>
+            <a href="../Portfolio_Website/index.html" target="_blank" type="button"class="btn btn-outline-primary p-2">Next Project</a>
         </div>
         
      
