--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -243,8 +243,8 @@
   </footer>
   <!-- ***************  Footer Section End ************************** -->
   <div class="container-fluid py-4 d-flex justify-content-between">
-    <a href="../index.html" type="button"class="btn btn-outline-primary p-3">Prev Project</a>
-    <a href="../Business_Website/index.html" type="button"class="btn btn-outline-primary p-3">Next Project</a>
+    <a href="../index.html" target="_blank" type="button"class="btn btn-outline-primary p-3">Prev Project</a>
+    <a href="../Business_Website/index.html" target="_blank" type="button"class="btn btn-outline-primary p-3">Next Project</a>
    </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
