--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
        <!------------------------------ part6  end-------------------------->
 
      <div class="container-fluid my-4 d-flex justify-content-end">
-        <a href="./Portfolio_Website/index.html" type="button"class="btn btn-outline-primary p-3">Next Project</a>
+        <a href="./Portfolio_Website/index.html" target="_blank" type="button"class="btn btn-outline-primary p-3">Next Project</a>
      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
  </body>
